tests/integration/errors/test_operator_wrong_return_type.sn
# Error test: operator == must return bool, not int

struct Point =>
  x: int
  y: int

  operator == (other: Point): int =>
    return 1

fn main(): void =>
  var p1: Point = {
    x: 1,
    y: 2
  }
  var p2: Point = {
    x: 1,
    y: 2
  }
  var eq: bool = p1 == p2
  print($"{eq}\n")
